--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Fake Bifrost App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bifrost PoC</title>
 
-  <!-- Twitter Meta Tags -->
+  <!-- Twitter Card meta -->
   <meta name="twitter:card" content="player">
   <meta name="twitter:site" content="@bifrost">
-  <meta name="twitter:title" content="Bifrost App">
-  <meta name="twitter:description" content="Liquid Staking for Stable and High Yield">
+  <meta name="twitter:title" content="Watch This!">
+  <meta name="twitter:description" content="Important update from Bifrost">
   <meta name="twitter:image" content="https://app.bifrost.io/images/social/logo.png">
-  
-  <!-- This is the critical part -->
-  <meta name="twitter:player" content="https://webhook.site/1b748f27-65d1-4860-aeea-8db5187d1411">
-  <meta name="twitter:player:stream" content="https://webhook.site/1b748f27-65d1-4860-aeea-8db5187d1411">
+
+  <!-- Injected payload player -->
+  <meta name="twitter:player" content="https://your-poc-site.github.io/poc/payload.html">
+  <meta name="twitter:player:stream" content="https://your-poc-site.github.io/poc/payload.html">
   <meta name="twitter:player:width" content="360">
   <meta name="twitter:player:height" content="600">
 </head>
 <body>
-  <h1>Fake Bifrost App</h1>
-  <p>This is a demo for Twitter takeover via open card tags.</p>
+  <h1>Bifrost PoC Test Page</h1>
 </body>
 </html>
