--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta name="twitter:image" content="https://app.bifrost.io/images/social/logo.png">
 
   <!-- Injected payload player -->
-  <meta name="twitter:player" content="https://your-poc-site.github.io/poc/payload.html">
-  <meta name="twitter:player:stream" content="https://your-poc-site.github.io/poc/payload.html">
+  <meta name="twitter:player" content="https://nathanogaga118.github.io/bifrost-poc/payload.html">
+  <meta name="twitter:player:stream" content="https://nathanogaga118.github.io/bifrost-poc/payload.html">
   <meta name="twitter:player:width" content="360">
   <meta name="twitter:player:height" content="600">
 </head>
